# modular-rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
helper_configs/: fastembed.py  sentence_transformers.py
notebooks/: 1_hardcoded.ipynb  2_basic_hypster.ipynb  3_hyperparameters.ipynb  4_selecting_components.ipynb  5_nested_components.ipynb  6_modular_rag.ipynb  modular-rag.ipynb  rag.ipynb
src/: haystack_utils.py
