[tool.poetry]
name = "modular-rag"
version = "0.1.0"
description = "Implementing 'Modular RAG: Transforming RAG Systems into LEGO-like Reconfigurable Frameworks' with Haystack and Hypster"
authors = ["gilad-rubin <gilad.rubin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
hypster = "^0.2.24"
ipywidgets = "^8.1.5"
ipykernel = "^6.29.5"
haystack-ai = "^2.6.1"
qdrant-haystack = "^6.0.0"
fastembed-haystack = "^1.3.0"
anthropic-haystack = "^1.1.0"
jina-haystack = "^0.4.0"
pypdf = "^5.0.1"
transformers = {extras = ["sentencepiece", "torch"], version = "^4.45.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
strict_optional = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F841", "F811", "F821"]