[project]
name = "modular-rag"
version = "0.1.0"
description = "Implementing 'Modular RAG: Transforming RAG Systems into LEGO-like Reconfigurable Frameworks' with Haystack and Hypster"
authors = [
    { name = "Gilad Rubin", email = "gilad.rubin@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "anthropic-haystack>=1.1.0",
    "fastembed-haystack>=1.3.0",
    "haystack-ai>=2.6.1",
    "hypster>=0.2.24",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jina-haystack>=0.4.0",
    "jupyterlab>=4.2.5",
    "pypdf>=5.0.1",
    "python-dotenv>=1.0.1",
    "qdrant-haystack>=6.0.0",
    "transformers[sentencepiece,torch]>=4.45.2",
]

[tool.mypy]
ignore_missing_imports = true
strict_optional = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F841", "F811", "F821"]
